[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Actors/Pot/olla_2.png" type="Texture" id=1]
[ext_resource path="res://Game/Actors/Pot/tapa.png" type="Texture" id=2]
[ext_resource path="res://Game/Actors/Pot.gd" type="Script" id=3]
[ext_resource path="res://Game/Actors/Pot/olla_4.png" type="Texture" id=4]
[ext_resource path="res://Game/Actors/Pot/olla_3.png" type="Texture" id=5]
[ext_resource path="res://Game/Actors/Pot/olla_1.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "CoverOn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, -70 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="CircleShape2D" id=3]
radius = 17.0294

[sub_resource type="CircleShape2D" id=4]
radius = 34.1321

[node name="Pot" type="KinematicBody2D" groups=[
"Pot",
]]
script = ExtResource( 3 )

[node name="Pot" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 2
playing = true

[node name="Cover" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="Cover"]
anims/CoverOn = SubResource( 1 )

[node name="TouchArea" type="TouchScreenButton" parent="."]
position = Vector2( -32, -35 )
shape = SubResource( 2 )

[node name="CaptureArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="CaptureArea"]
shape = SubResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="CookingTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="pressed" from="TouchArea" to="." method="_on_TouchArea_pressed"]
[connection signal="body_entered" from="CaptureArea" to="." method="_on_CaptureArea_body_entered"]
[connection signal="timeout" from="CookingTime" to="." method="_on_CookingTime_timeout"]
